@@ -10,6 +10,7 @@ munin (1.0.0pre2)
   * Fixed pod typos patched by Lupe Christoph (SF#884092)
   * Made Munin compatible with perl 5.005_03 (patch by Lupe Christoph)
     (SF#884622)
+  * Removed sunos/io_-plugin (SF#882357)
 
 munin (1.0.0pre1)
 
